third_party/move/move-bytecode-verifier/transactional-tests/tests/check_duplication/friend_decl_duplicated.exp
processed 2 tasks
task 0 lines 1-2:  publish [module 0x42::A]
task 1 lines 5-8:  publish [module 0x42::B]
Error: error: duplicate friend module `0x42::A`
  ┌─ test:1:1
  │
1 │ 
  │ ^


